--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.1.0",
     "grommet": "^1.5.0",
     "react": "^15.6.1",
+    "rimraf": "^2.6.1",
     "webpack": "^3.4.1"
   },
   "peerDependencies": {
